--- a/events/templates/events/base.html
+++ b/events/templates/events/base.html
@@ -68,9 +68,8 @@
             <span class="tag">Email:</span><a href="mailto:weeklytournaments0@gmail.com">weeklytournaments0@gmail.com</a>
         </div>
         <div class="copyright">
-            <span>&copy; Copyright 2022, Noah Turnquist. All Rights Reserved</span>
+            <span class="smaller-text">&copy; Copyright 2022, Noah Turnquist. All Rights Reserved</span>
         </div>
     </footer>
-    
 </body>
 </html>
