--- a/events/templates/events/base.html
+++ b/events/templates/events/base.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="{% static 'events/css/register.css' %}">
     <link rel="stylesheet" href="{% static 'events/css/profile.css' %}">
     <link rel="stylesheet" href="{% static 'events/css/event_register.css' %}">
+    <link rel="stylesheet" href="{% static 'events/css/event_detail.css' %}">
 
     <!-- Icon -->
     <link rel="icon" href="{% static 'events/icons/company/wt_logo_001.png' %}">
