--- a/events/templates/events/event_detail.html
+++ b/events/templates/events/event_detail.html
@@ -30,20 +30,43 @@
             </div>
         </div>
         <section class="informational">
-            <div class="section-header">
-                <span>Welcome to</span>
-                <h1>Weekly Tournaments</h1>
-                <img src="{% static 'events/icons/company/wt_logo_001.png' %}" alt="">
+            <div class="section-header" id="tournament-info">
+                <span>Tournament</span>
+                <h1>Info</h1>
+                <div class="iframe-container">
+                    <iframe class="med-video" src="https://www.youtube.com/embed/Yv3e3wDQIGU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <span id="intro-video-title">Introduction Video</span>
+                </div>
             </div>
             <div class="section-main-text">
                 <div class="tag">
-                    <span>Mission Statement</span>
+                    <span>Info</span>
                 </div>
                 <p>
-                    Weekly Tournaments goal is to provide low commitment, fun tournaments with stat tracking and highlights
-                    available for each and every player.
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Gravida arcu ac tortor dignissim convallis aenean et tortor. Ut aliquam purus sit amet luctus venenatis. Ullamcorper sit amet risus nullam. Libero nunc consequat interdum varius sit amet mattis. Est ullamcorper eget nulla facilisi etiam. Facilisis mauris sit amet massa vitae tortor condimentum lacinia. Aliquet nibh praesent tristique magna sit. Cras fermentum odio eu feugiat pretium nibh. Pellentesque diam volutpat commodo sed egestas egestas. Enim nulla aliquet porttitor lacus luctus accumsan tortor posuere ac. Imperdiet proin fermentum leo vel orci porta non. Enim diam vulputate ut pharetra sit amet aliquam id. Hac habitasse platea dictumst quisque sagittis purus sit. Sem fringilla ut morbi tincidunt augue interdum velit euismod in. Turpis massa tincidunt dui ut. Volutpat ac tincidunt vitae semper quis lectus. Urna id volutpat lacus laoreet non. Condimentum mattis pellentesque id nibh. Viverra ipsum nunc aliquet bibendum enim facilisis gravida neque.
+                    The tournament is a 5 vs. 5 full court tournament, consisting of 8 teams.
+                    Each team will get to play at least 2 games. As there is a 2-game regular season, followed by a 4 team single-elimination tournament.
+                    All games will be officiated by a trained referee. <br>
+                    The tiebreaker rules are as follows, ...
                 </p>
+            </div>
+            <div class="section-main-text">
+                <div class="tag">
+                    <span>Rules</span>
+                </div>
+                <div class="list-container">
+                    <ul class="red-list">
+                        <li>The games will be officiated using NBA rules, apart from a few exceptions.</li>
+                        <li><a href="https://official.nba.com/rule-no-1-court-dimensions-equipment/">NBA rulebook</a></li>
+                        <li>Exception 1: any shot beyond half-court is worth 4-points</li>
+                        <li>Exception 2: 4-fouls to foul out</li>
+                    </ul>
+                    <ul class="red-list">
+                        <li>Each half is 10-minutes long</li>
+                        <li>5-minute halftime</li>
+                        <li>If a player on your team is unable to play, we will provide a sub</li>
+                        <li>The sub will either be one provided by the tournament, or will be a player from an eliminated team</li>
+                    </ul>
+                </div>
             </div>
         </section>
         {% if request.user.is_staff %}
