--- a/events/templates/events/event_detail.html
+++ b/events/templates/events/event_detail.html
@@ -29,47 +29,51 @@
                 </div>
             </div>
         </div>
-        <section class="informational">
-            <div class="section-header" id="tournament-info">
-                <span>Tournament</span>
-                <h1>Info</h1>
-                <div class="iframe-container">
-                    <iframe class="med-video" src="https://www.youtube.com/embed/Yv3e3wDQIGU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <span id="intro-video-title">Introduction Video</span>
+        <!-- Basketball Details -->
+        {% if object.type == '1' %}
+            <section class="informational">
+                <div class="section-header" id="tournament-info">
+                    <span>Tournament</span>
+                    <h1>Info</h1>
+                    <div class="iframe-container">
+                        <iframe class="med-video" src="https://www.youtube.com/embed/Yv3e3wDQIGU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <span id="intro-video-title">Introduction Video</span>
+                    </div>
                 </div>
-            </div>
-            <div class="section-main-text">
-                <div class="tag">
-                    <span>Info</span>
+                <div class="section-main-text">
+                    <div class="tag">
+                        <span>Info</span>
+                    </div>
+                    <p>
+                        The tournament is a 5 vs. 5 full court tournament, consisting of 8 teams.
+                        Each team will get to play at least 2 games. As there is a 2-game regular season, followed by a 4 team single-elimination tournament.
+                        All games will be officiated by a trained referee. <br>
+                        The tiebreaker rules are as follows, ...
+                    </p>
                 </div>
-                <p>
-                    The tournament is a 5 vs. 5 full court tournament, consisting of 8 teams.
-                    Each team will get to play at least 2 games. As there is a 2-game regular season, followed by a 4 team single-elimination tournament.
-                    All games will be officiated by a trained referee. <br>
-                    The tiebreaker rules are as follows, ...
-                </p>
-            </div>
-            <div class="section-main-text">
-                <div class="tag">
-                    <span>Rules</span>
+                <div class="section-main-text">
+                    <div class="tag">
+                        <span>Rules</span>
+                    </div>
+                    <div class="list-container">
+                        <ul class="red-list">
+                            <li>The games will be officiated using NBA rules, apart from a few exceptions.</li>
+                            <li><a href="https://official.nba.com/rule-no-1-court-dimensions-equipment/">NBA rulebook</a></li>
+                            <li>Exception 1: any shot beyond half-court is worth 4-points</li>
+                            <li>Exception 2: 4-fouls to foul out</li>
+                        </ul>
+                        <ul class="red-list">
+                            <li>Each half is 10-minutes long</li>
+                            <li>5-minute halftime</li>
+                            <li>If a player on your team is unable to play, we will provide a sub</li>
+                            <li>The sub will either be one provided by the tournament, or will be a player from an eliminated team</li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="list-container">
-                    <ul class="red-list">
-                        <li>The games will be officiated using NBA rules, apart from a few exceptions.</li>
-                        <li><a href="https://official.nba.com/rule-no-1-court-dimensions-equipment/">NBA rulebook</a></li>
-                        <li>Exception 1: any shot beyond half-court is worth 4-points</li>
-                        <li>Exception 2: 4-fouls to foul out</li>
-                    </ul>
-                    <ul class="red-list">
-                        <li>Each half is 10-minutes long</li>
-                        <li>5-minute halftime</li>
-                        <li>If a player on your team is unable to play, we will provide a sub</li>
-                        <li>The sub will either be one provided by the tournament, or will be a player from an eliminated team</li>
-                    </ul>
-                </div>
-            </div>
-        </section>
+            </section>
+        {% endif %}
         {% if request.user.is_staff %}
+        <h2 style="text-align:center">Staff Buttons</h2>
         <div class="staff-btn-container">
             <a class="signup-btn" id="info-btn" href="{% url 'event-update' object.id %}">Update</a>
             <a class="signup-btn" id="danger-btn" href="{% url 'event-delete' object.id %}">Delete</a>
