finish styling event-details page

--- a/events/static/events/css/main.css
+++ b/events/static/events/css/main.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'Semplitica Ombra';
+    src: url('../fonts/Semplicita/Semplicita_Ombra.otf');
+}
+
 :root {
     --base: #171717;
     --base-secondary: #444444;
