--- a/events/static/events/css/register.css
+++ b/events/static/events/css/register.css
@@ -77,7 +77,7 @@
     line-height: 2rem;
 }
 
-.input-form .helptext, .input-form .helptext ul {
+.input-form .helptext, .form-container ul {
     font-size: 0.8rem;
     filter: brightness(75%);
     margin-left: 1rem;
