Setup custom form and implement view functionality to add teammates

--- a/events/templates/events/base.html
+++ b/events/templates/events/base.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="{% static 'events/css/profile.css' %}">
     <link rel="stylesheet" href="{% static 'events/css/event_register.css' %}">
     <link rel="stylesheet" href="{% static 'events/css/event_detail.css' %}">
+    <link rel="stylesheet" href="{% static 'events/css/teammate_select.css' %}">
 
     <!-- Icon -->
     <link rel="icon" href="{% static 'events/icons/company/wt_logo_001.png' %}">
