--- a/events/static/events/css/teammate_select.css
+++ b/events/static/events/css/teammate_select.css
@@ -11,7 +11,6 @@
     line-height: 4rem;
     font-size: 1.25rem;
     font-weight: 200;
-    background-color: var(--base-secondary);
     border-top: 1px solid var(--base);
 }
 
@@ -28,7 +27,12 @@
     text-align: center;
     display: flex;
     justify-content: space-evenly;
+    background-color: var(--base-secondary);
     transition: 0.2s;
+}
+
+#teammates-list span {
+    width: 100%;
 }
 
 #teammates-list label:hover {
