--- a/events/static/events/css/profile.css
+++ b/events/static/events/css/profile.css
@@ -29,7 +29,7 @@
     margin-right: 4rem;
     object-fit: cover;
     height: 12rem;
-    width: auto;
+    width: 12rem;
     border-radius: 50%;
 }
 
