--- a/events/static/events/css/event_register.css
+++ b/events/static/events/css/event_register.css
@@ -12,3 +12,26 @@
     filter: invert();
     transition: 0.5s;
 }
+
+.success-page-buttons {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+}
+
+.success-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding: 1rem 0;
+    font-size: 1rem;
+}
+
+.success-text p {
+    display: inline-block;
+}
+
+#inline-link {
+    font-size: 1rem;
+}
