--- a/events/static/events/css/profile.css
+++ b/events/static/events/css/profile.css
@@ -76,13 +76,12 @@
     text-transform: uppercase;
 }
 
-.upcoming-events {
+.profile-tab-info {
     margin-top: 3rem;
     display: flex;
     flex-direction: column;
     font-size: 1.5rem;
+    width: 90%;
+    margin: 3rem;
 }
 
-.profile ul {
-    font-size: 1rem;
-}
