update images so areas that should have unique images have them, and areas that should have the same are uniform

--- a/events/static/events/css/event_register.css
+++ b/events/static/events/css/event_register.css
@@ -35,3 +35,9 @@
 #inline-link {
     font-size: 1rem;
 }
+
+#side-img-event-register {
+    position: relative;
+    top: -60px;
+    left: -180px;
+}
