--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -6,9 +6,7 @@
         {% for event in events %}
             <div class="banner">
                 <div class="video-wrapper">
-                    <video src="{% static 'events/videos/home_page_background_v002.mp4' %}" muted>
-                        Video could not load
-                    </video>
+                    <img id='basketball-list-img' src="{% static 'events/images/types/basketball_001.png' %}" alt="">
                     <div class="overlay-text">
                         <div class="spacer"></div>
                         <div class="banner-title">
