--- a/events/templates/events/event_register_success.html
+++ b/events/templates/events/event_register_success.html
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="form-sidepanel">
-            <img src="{% static 'events/images/background/dunking_outside_001.jpg' %}" alt="">
+            <img id="side-img-event-register" src="{% static 'events/images/background/dribble_001.jpg' %}" alt="">
         </div>
     </div>
 {% endblock %}
