--- a/users/templates/users/password_reset_done.html
+++ b/users/templates/users/password_reset_done.html
@@ -1,6 +1,15 @@
 {% extends "events/base.html" %}
+{% load static %}
 {% block content %}
-    <div class="input-form">
-        <h2>An email has been sent with instructions to reset your password.</h2>
+    <div class="form-container form-container-login">
+        <div class="input-form">
+            <legend>An email has been sent with instructions to reset your password</legend>
+            <div class="button-container">
+                <a style="margin-top: 2rem" href="{% url 'login' %}">Go to login page</a>
+            </div>
+        </div>
+        <div class="form-sidepanel">
+            <img id="side-img-login" src="{% static 'events/images/background/dunking_outside_002.jpg' %}" alt="">
+        </div>
     </div>
 {% endblock content %}
