--- a/events/templates/events/event_register.html
+++ b/events/templates/events/event_register.html
@@ -31,7 +31,7 @@
             {% endif %}
         </div>
         <div class="form-sidepanel">
-            <img src="{% static 'events/images/background/dunking_outside_001.jpg' %}" alt="">
+            <img id="side-img-event-register" src="{% static 'events/images/background/dribble_001.jpg' %}" alt="">
         </div>
     </div>
 
