--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -1,7 +1,15 @@
 {% extends "events/base.html" %}
+{% load static %}
 {% block content %}
-    <div class="input-form">
-        <h2>You have been logged out</h2>
-        <small><a href="{% url 'login' %}">Log In Again</a></small>
+    <div class="form-container form-container-login">
+        <div class="input-form">
+            <legend>You have been logged out</legend>
+            <div class="button-container">
+                <a style="margin-top: 2rem" href="{% url 'login' %}">Go to login page</a>
+            </div>
+        </div>
+        <div class="form-sidepanel">
+            <img id="side-img-login" src="{% static 'events/images/background/dunking_outside_002.jpg' %}" alt="">
+        </div>
     </div>
 {% endblock content %}
