--- a/users/templates/users/password_reset_confirm.html
+++ b/users/templates/users/password_reset_confirm.html
@@ -15,7 +15,7 @@
             </form>
         </div>
         <div class="form-sidepanel">
-            <img src="{% static 'events/images/background/shooting_outside_001.jpg' %}" alt="">
+            <img id="side-img-login" src="{% static 'events/images/background/dunking_outside_002.jpg' %}" alt="">
         </div>
     </div>
 {% endblock content %}
