--- a/events/static/events/css/main.css
+++ b/events/static/events/css/main.css
@@ -270,6 +270,21 @@ a:active {
     gap: 5rem;
 }
 
+.list-and-text-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.underline {
+    text-decoration: underline;
+}
+
+.italic {
+    font-style: italic;
+}
+
 .red-list {
     list-style: none;
 }
@@ -281,6 +296,10 @@ a:active {
     display: inline-block;
     width: 1em;
     margin-left: -1em;
+}
+
+.big-text {
+    font-size: 1.5rem;
 }
 
 /* Images */
