--- a/events/templates/events/home.html
+++ b/events/templates/events/home.html
@@ -15,7 +15,7 @@
                     <div class="banner-secondary">
                         <h3>{{ event.title }}</h3>
                         <h3>{{ event.location }}</h3>
-                        <a class="btn home-btn" href="{% url 'event-detail' event.id %}" >Check It Out</a>
+                        <a class="btn home-btn" href="{% url 'event-detail' event.id %}" >Join Tournament</a>
                     </div>
                 </div>
             </div>
@@ -32,8 +32,8 @@
                 </div>
                 <p>
                     Weekly Tournaments goal is to provide low commitment, fun tournaments with stat tracking and highlights
-                    available for each and every player.
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Gravida arcu ac tortor dignissim convallis aenean et tortor. Ut aliquam purus sit amet luctus venenatis. Ullamcorper sit amet risus nullam. Libero nunc consequat interdum varius sit amet mattis. Est ullamcorper eget nulla facilisi etiam. Facilisis mauris sit amet massa vitae tortor condimentum lacinia. Aliquet nibh praesent tristique magna sit. Cras fermentum odio eu feugiat pretium nibh. Pellentesque diam volutpat commodo sed egestas egestas. Enim nulla aliquet porttitor lacus luctus accumsan tortor posuere ac. Imperdiet proin fermentum leo vel orci porta non. Enim diam vulputate ut pharetra sit amet aliquam id. Hac habitasse platea dictumst quisque sagittis purus sit. Sem fringilla ut morbi tincidunt augue interdum velit euismod in. Turpis massa tincidunt dui ut. Volutpat ac tincidunt vitae semper quis lectus. Urna id volutpat lacus laoreet non. Condimentum mattis pellentesque id nibh. Viverra ipsum nunc aliquet bibendum enim facilisis gravida neque.
+                    available for each and every player. Weekly Tournaments was established in 2022 and is launching its first tournament this summer.
+                    The company is based in Minneapolis, Minnesota and primarly focuses on basketball tournaments but hopes to expand to other tournaments and events in the future.
                 </p>
             </div>
         </section>
@@ -48,7 +48,12 @@
                     <span>Synopsis</span>
                 </div>
                 <p>
-                    Synopsis of Will goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lobortis feugiat vivamus at augue eget arcu dictum. Sit amet tellus cras adipiscing enim eu. Dictum non consectetur a erat. Lectus nulla at volutpat diam ut. Nisi lacus sed viverra tellus in hac habitasse. In aliquam sem fringilla ut morbi tincidunt augue interdum. Posuere sollicitudin aliquam ultrices sagittis orci a scelerisque purus. Lacus viverra vitae congue eu. Faucibus interdum posuere lorem ipsum. Sed risus pretium quam vulputate dignissim. At augue eget arcu dictum varius. Adipiscing bibendum est ultricies integer. Tincidunt ornare massa eget egestas purus viverra accumsan in nisl. Ipsum nunc aliquet bibendum enim. Dolor morbi non arcu risus quis varius. Vestibulum lectus mauris ultrices eros in cursus turpis massa.
+                    William Turnquist is a 24-year old basketball enthusiast. 
+                    Who fell in love with the game of basketball his sophomore year in highschool, 
+                    ever since then he has played basketball as often as he can except for a one-year break because of a torn ACL. 
+                    William says running Weekly Tournaments is his dream job. <br>
+                    <span class="italic">"I hope to someday make this my career and have Weekly Tournaments location's all around the country that run multiple sports 
+                    and maybe even other kinds of competitions every week."</span> -William Turnquist
                 </p>
             </div>
         </section>
