--- a/events/static/events/css/home.css
+++ b/events/static/events/css/home.css
@@ -6,6 +6,8 @@
 }
 
 .banner {
+    position: relative;
+    overflow: hidden;
     height: 40rem;
     background-color: rgba(0, 0, 0, 0.5);
 }
@@ -35,6 +37,7 @@
     width: 100%;
     height: 100%;
     z-index: 5;
+    padding: 0 10%;
     position: relative;
     display: grid;
     grid-template-areas: "spacer"
@@ -82,6 +85,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    padding: 0;
 }
 
 .countdown-text .big {
@@ -105,6 +109,59 @@
 
 .banner-secondary .home-btn {
     width: 12rem;
+}
+
+/* Countdown */
+
+@media only screen and (max-width: 1200px) {
+    .countdown-text .big {
+        font-size: 6rem;
+        font-weight: 600;
+    }
+
+    .countdown-text .small {
+        position: relative;
+        font-size: 0.85rem;
+        font-weight: 200;
+    }
+}
+
+@media only screen and (max-width: 650px) {
+    .banner .overlay-text {
+        grid-template-rows: 5% 40% 1fr;
+    }
+
+    .countdown-text {
+        flex-wrap: wrap;
+        padding: 2.5rem;
+    }
+
+    .countdown-text div{
+        overflow: hidden;
+        width: 15rem;
+    }
+
+    .countdown-text .big {
+        font-size: 5rem;
+        font-weight: 600;
+    }
+
+    .countdown-text .small {
+        font-size: 0.7rem;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+
+    .banner .overlay-text {
+        grid-template-rows: 5% 20% 1fr;
+        gap: 2rem;
+    }
+
+    .countdown-text .big {
+        font-size: 4rem;
+        font-weight: 600;
+    }
 }
 
 /* Button Styles */
@@ -143,3 +200,4 @@
 #about-wt {
     margin-top: 2rem;
 }
+
