--- a/events/static/events/css/main.css
+++ b/events/static/events/css/main.css
@@ -4,6 +4,7 @@
 }
 
 :root {
+    font-size: 16px;
     --base: #171717;
     --base-secondary: #444444;
     --primary: #EDEDED;
@@ -21,6 +22,12 @@ body {
     color: var(--primary);
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     height: 100%;
+}
+
+@media only screen and (max-width: 800px) {
+    :root {
+        font-size: 14px;
+    }
 }
 
 main {
@@ -93,6 +100,21 @@ main {
 
 .center {
     text-align: center;
+}
+
+@media only screen and (max-width: 650px) {
+    .navbar {
+        grid-template-columns: repeat(2, 1fr);
+        white-space: nowrap;
+    }
+
+    .navbar span {
+        display: none;
+    }
+
+    .navbar li {
+        margin: 0 1rem;
+    }
 }
 
 /* Alerts */
@@ -216,6 +238,7 @@ a:active {
     margin: 0 10%;
     margin-top: 5rem;
     margin-bottom: 10rem;
+    overflow: hidden;
 }
 
 .informational .section-header {
