--- a/events/static/events/css/event_detail.css
+++ b/events/static/events/css/event_detail.css
@@ -11,6 +11,7 @@
     display: inline-block;
     position: relative;
     width: 15rem;
+    height: 15rem;
     border: 2px solid var(--primary);
     border-radius: 50%;
     background-color: var(--primary);
